--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,12 @@
 			<artifactId>spring-data-commons</artifactId>
 			<version>2.3.2.RELEASE</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
