--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.jackson.deserialization.fail-on-unknown-properties=true
+logging.level.org.springframework.boot.autoconfigure=ERROR
+
